try an appveyor update

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,11 @@
-version: 2016.03.1.dev{build}
+version: 2018.03.1.dev{build}
 
 environment:
   P: "c:/projects/libs"
   RDBASE: "c:/projects/RDKit"
   PATH: "%RDBASE%/lib;%PATH%"
-  BOOST_ROOT: c:/Libraries/boost
-  BOOST_LIBRARYDIR: c:/Libraries/boost/lib64-msvc-12.0
+  BOOST_ROOT: c:/Libraries/boost_1_65_1
+  BOOST_LIBRARYDIR: c:/Libraries/boost_1_65_1/lib64-msvc-14.1
 
 
 # branches to build
@@ -39,11 +39,13 @@ build:
 
 # scripts to run before build
 before_build:
+  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
   - echo Running cmake...
+  - dir c:\Libraries\boost_1_65_1
   - cd c:\projects\RDKit
   - mkdir c:\projects\RDKit\build
   - cd c:\projects\RDKit\build
-  - cmake -G "Visual Studio 12 Win64" -DCMAKE_INSTALL_PREFIX=%P% -DRDK_BUILD_PYTHON_WRAPPERS=OFF -DRDK_BUILD_SWIG_WRAPPERS=OFF -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" ..
+  - cmake -G "Visual Studio 15 2017 Win64" -DCMAKE_INSTALL_PREFIX=%P% -DRDK_BUILD_PYTHON_WRAPPERS=OFF -DRDK_BUILD_SWIG_WRAPPERS=OFF -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" ..
 
 #test_script:
 #  - cd c:\projects\RDKit\build
