--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,12 +38,14 @@ build:
   parallel: true
   verbosity: quiet
 
+init:
+  - cmake -version
+  - C:\"Program Files (x86)"\"Microsoft Visual Studio"\2017\Community\VC\Auxiliary\Build\vcvarsall.bat amd64
+
 # scripts to run before build
 before_build:
   - echo Running cmake...
   - cd c:\projects\RDKit
-  - cmake -version
-  - C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat amd64
   - mkdir c:\projects\RDKit\build
   - cd c:\projects\RDKit\build
   - cmake -G "Visual Studio 15 2017 Win64" -DCMAKE_INSTALL_PREFIX=%P% -DRDK_BUILD_PYTHON_WRAPPERS=OFF -DRDK_BUILD_SWIG_WRAPPERS=OFF -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" ..
