is the problem the os item?

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ branches:
 
 # Operating system (build VM template)
 #os: Windows Server 2012 R2
-os: unstable
+#os: unstable
 
 # scripts that are called at very beginning, before repo cloning
 init:
