output on test errors

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,9 +24,6 @@ branches:
 init:
   - git config --global core.autocrlf input
   - cmake -version
-  - dir C:\"Program Files (x86)"
-  - dir C:\"Program Files (x86)"\"Microsoft Visual Studio"
-  - dir C:\"Program Files (x86)"\"Microsoft Visual Studio"\2017
 
 # clone directory
 clone_folder: c:\projects\RDKit
@@ -53,7 +50,7 @@ before_build:
 
 test_script:
   - cd c:\projects\RDKit\build
-  - ctest -j2
+  - ctest -j2 -output-on-failure
 
 # scripts to run after build
 #after_build:
