suppress some warnings on windows (and remove a bogus attempt at doing so)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,7 +146,12 @@ install(FILES
 
 # disable some warnings that we don't care about
 if(MSVC)
-  target_compile_definitions(rdkit_base INTERFACE "/wd4267")  # conversion with possible loss of data. This should occasionally be enabled to check what's going on
+  # These should occasionally be enabled to check what's going on
+  # 4267 conversion with possible loss of data.
+  # 4305 truncation from 'double' to 'const float'
+  # 4244 conversion from 'uint64_t' to 'unsigned int', possible loss of data
+  target_compile_options(rdkit_base INTERFACE "/wd4267" "/wd4305" "/wd4244")
+  target_compile_definitions(rdkit_base INTERFACE "_CRT_SECURE_NO_WARNINGS")
 endif(MSVC)
 
 
