--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,11 +18,12 @@ branches:
 
 # Operating system (build VM template)
 #os: Windows Server 2012 R2
-os: unstable
+#os: unstable
 
 # scripts that are called at very beginning, before repo cloning
 init:
   - git config --global core.autocrlf input
+  - cmake -version
 
 # clone directory
 clone_folder: c:\projects\RDKit
@@ -38,21 +39,18 @@ build:
   parallel: true
   verbosity: quiet
 
-init:
-  - cmake -version
-  - C:\"Program Files (x86)"\"Microsoft Visual Studio"\2017\Community\VC\Auxiliary\Build\vcvarsall.bat amd64
-
 # scripts to run before build
 before_build:
   - echo Running cmake...
   - cd c:\projects\RDKit
   - mkdir c:\projects\RDKit\build
   - cd c:\projects\RDKit\build
-  - cmake -G "Visual Studio 15 2017 Win64" -DCMAKE_INSTALL_PREFIX=%P% -DRDK_BUILD_PYTHON_WRAPPERS=OFF -DRDK_BUILD_SWIG_WRAPPERS=OFF -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" ..
+  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat" amd64
+  - cmake -G "Visual Studio 15 2017 Win64" -DCMAKE_INSTALL_PREFIX=%P% -DRDK_USE_BOOST_SERIALIZATION=OFF -DRDK_BUILD_PYTHON_WRAPPERS=OFF -DRDK_BUILD_SWIG_WRAPPERS=OFF -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" ..
 
-#test_script:
-#  - cd c:\projects\RDKit\build
-#  - ctest
+test_script:
+  - cd c:\projects\RDKit\build
+  - ctest -j2 --output-on-failure
 
 # scripts to run after build
 #after_build:
