--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ environment:
   PATH: "%RDBASE%/lib;%PATH%"
   BOOST_ROOT: c:/Libraries/boost_1_65_1
   BOOST_LIBRARYDIR: c:/Libraries/boost_1_65_1/lib64-msvc-14.0
-
+  PYTHON: C:\Python36-x64
 image: Visual Studio 2017
 
 # branches to build
@@ -45,8 +45,9 @@ before_build:
   - cd c:\projects\RDKit
   - mkdir c:\projects\RDKit\build
   - cd c:\projects\RDKit\build
+  - set PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%
   - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat" amd64
-  - cmake -G "Visual Studio 15 2017 Win64" -DCMAKE_INSTALL_PREFIX=%P% -DRDK_USE_BOOST_SERIALIZATION=OFF -DRDK_BUILD_PYTHON_WRAPPERS=OFF -DRDK_BUILD_SWIG_WRAPPERS=OFF -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" ..
+  - cmake -G "Visual Studio 15 2017 Win64" -DCMAKE_INSTALL_PREFIX=%P% -DRDK_USE_BOOST_SERIALIZATION=OFF -DRDK_BUILD_PYTHON_WRAPPERS=ON -DRDK_BUILD_SWIG_WRAPPERS=OFF -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" ..
 
 test_script:
   - cd c:\projects\RDKit\build
