--- a/Code/RDBoost/CMakeLists.txt
+++ b/Code/RDBoost/CMakeLists.txt
@@ -1,9 +1,9 @@
 if(WIN32 OR "${Py_ENABLE_SHARED}" STREQUAL "1")
   rdkit_library(RDBoost Wrap.cpp
-                LINK_LIBRARIES RDGeneral ${PYTHON_LIBRARIES} ${Boost_IMPORTED_LIBRARIES})
+                LINK_LIBRARIES RDGeneral ${PYTHON_LIBRARIES} ${Boost_LIBRARIES})
 else()
     rdkit_library(RDBoost Wrap.cpp
-                LINK_LIBRARIES RDGeneral ${Boost_IMPORTED_LIBRARIES})
+                LINK_LIBRARIES RDGeneral ${Boost_LIBRARIES})
     if("${PYTHON_LDSHARED}" STREQUAL "")
     else()
        # fixes an apple issue
