--- a/Code/PgSQL/rdkit/CMakeLists.txt
+++ b/Code/PgSQL/rdkit/CMakeLists.txt
@@ -29,11 +29,11 @@ if(WIN32)
 endif(WIN32)
 if(RDK_BUILD_AVALON_SUPPORT)
   include_directories(${CMAKE_SOURCE_DIR}/External)
-  add_definitions(-DBUILD_AVALON_SUPPORT)
+  add_definitions(-DRDK_BUILD_AVALON_SUPPORT)
 endif(RDK_BUILD_AVALON_SUPPORT)
 if(RDK_BUILD_INCHI_SUPPORT)
   include_directories(${CMAKE_SOURCE_DIR}/External)
-  add_definitions(-DBUILD_INCHI_SUPPORT)
+  add_definitions(-DRDK_BUILD_INCHI_SUPPORT)
 endif(RDK_BUILD_INCHI_SUPPORT)
 add_definitions(-DRDKITVER="007300")
 if(NOT DEFINED PostgreSQL_ROOT)
