--- a/External/AvalonTools/CMakeLists.txt
+++ b/External/AvalonTools/CMakeLists.txt
@@ -38,7 +38,7 @@ if(needDownload)
   file(WRITE "${fileToPatch}" "${buffer}")
 endif()
 
-add_definitions(-DBUILD_AVALON_SUPPORT)
+add_definitions(-DRDK_BUILD_AVALON_SUPPORT)
 if (MSVC)
   add_definitions( "/D_CRT_SECURE_NO_WARNINGS /wd4224 /wd4101 /wd4018 /wd4996 /wd4244 /wd4305 /wd4013 /wd4146 /wd4334 /wd4715 /wd4715  /nologo" )
 endif(MSVC)
