- export.h and test.h are now auto-generated by CMake

--- a/Code/RDBoost/CMakeLists.txt
+++ b/Code/RDBoost/CMakeLists.txt
@@ -21,6 +21,8 @@ rdkit_headers(Wrap.h PySequenceHolder.h
               python.h
               boost_numpy.h
               python_streambuf.h
+              export.h
+              test.h
               DEST RDBoost)
 
 add_subdirectory(Wrap)
