--- a/Code/GraphMol/Wrap/CMakeLists.txt
+++ b/Code/GraphMol/Wrap/CMakeLists.txt
@@ -22,17 +22,23 @@ rdkit_python_extension(rdqueries
                        LINK_LIBRARIES
                        GraphMol RDGeometryLib DataStructs RDGeneral RDBoost  )
 
+if(RDK_BUILD_COORDGEN_SUPPORT)
+    set (maesupplier MaeMolSupplier.cpp)
+else()
+    set (maesupplier "")
+endif()
+
 if(RDK_BUILD_COMPRESSED_SUPPLIERS)
 find_package(Boost 1.56.0 COMPONENTS iostreams REQUIRED)
 set(rdmolfiles_sources rdmolfiles.cpp
-                       ForwardSDMolSupplier.cpp
+                       ForwardSDMolSupplier.cpp ${maesupplier}
                        SDMolSupplier.cpp TDTMolSupplier.cpp
                        SmilesMolSupplier.cpp SmilesWriter.cpp SDWriter.cpp
                        TDTWriter.cpp CompressedSDMolSupplier.cpp
                        PDBWriter.cpp )
 else(RDK_BUILD_COMPRESSED_SUPPLIERS)
 set(rdmolfiles_sources rdmolfiles.cpp
-                       ForwardSDMolSupplier.cpp
+                       ForwardSDMolSupplier.cpp ${maesupplier}
                        SDMolSupplier.cpp TDTMolSupplier.cpp
                        SmilesMolSupplier.cpp SmilesWriter.cpp SDWriter.cpp
                        TDTWriter.cpp
