- fixes the dynamic/static library CMake logic

--- a/Code/PgSQL/rdkit/CMakeLists.txt
+++ b/Code/PgSQL/rdkit/CMakeLists.txt
@@ -87,7 +87,7 @@ endif(APPLE)
 set(avalonRegress "")
 set(inchiRegress "")
 set(pgRDKitLibSuffix "")
-if(RDK_PGSQL_STATIC AND (NOT MSVC))
+if(RDK_PGSQL_STATIC AND ((NOT MSVC) OR (MSVC AND RDK_INSTALL_DLLS_MSVC)))
   set(pgRDKitLibSuffix "_static")
 endif()
 set(pgRDKitLibList "")
