--- a/External/CoordGen/CMakeLists.txt
+++ b/External/CoordGen/CMakeLists.txt
@@ -19,7 +19,7 @@ if(RDK_BUILD_COORDGEN_SUPPORT)
 
     file(GLOB MAESOURCES "${MAEPARSER_DIR}/*.cpp")
     rdkit_library(maeparser ${MAESOURCES} SHARED )
-    if(MSVC AND RDK_INSTALL_DYNAMIC_LIBS)
+    if((MSVC AND RDK_INSTALL_DLLS_MSVC) OR ((NOT MSVC) AND WIN32))
       set_target_properties(maeparser PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
     endif()
     install(TARGETS maeparser DESTINATION ${RDKit_LibDir})
@@ -42,7 +42,7 @@ if(RDK_BUILD_COORDGEN_SUPPORT)
 
     file(GLOB CGSOURCES "${COORDGEN_DIR}/*.cpp")
     rdkit_library(coordgenlib ${CGSOURCES} SHARED LINK_LIBRARIES maeparser)
-    if(MSVC AND RDK_INSTALL_DYNAMIC_LIBS)
+    if((MSVC AND RDK_INSTALL_DLLS_MSVC) OR ((NOT MSVC) AND WIN32))
       set_target_properties(coordgenlib PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
     endif()
     install(TARGETS coordgenlib DESTINATION ${RDKit_LibDir})
