--- a/External/CoordGen/CMakeLists.txt
+++ b/External/CoordGen/CMakeLists.txt
@@ -5,14 +5,14 @@ if(RDK_BUILD_COORDGEN_SUPPORT)
       set(MAEPARSER_DIR "${CMAKE_CURRENT_SOURCE_DIR}/maeparser")
     endif()
     if(NOT EXISTS "${MAEPARSER_DIR}/MaeParser.hpp")
-        set(SHA "83368293dcc0eb07562dadfb7728b8d18d23a6cb")
-        downloadAndCheckMD5("https://codeload.github.com/schrodinger/maeparser/tar.gz/${SHA}"
+        set(RELEASE_NO "1.0.0")
+        downloadAndCheckMD5("https://github.com/schrodinger/maeparser/archive/${RELEASE_NO}.tar.gz"
               "${CMAKE_CURRENT_SOURCE_DIR}/master.tar.gz"
-              "32c0c3b315bba49fbf4c41a07aa58528")
+              "770d941264dde4825aaa505e59642e51")
         execute_process(COMMAND ${CMAKE_COMMAND} -E tar zxf
           ${CMAKE_CURRENT_SOURCE_DIR}/master.tar.gz
           WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-        file(RENAME "maeparser-${SHA}" "${MAEPARSER_DIR}")
+        file(RENAME "maeparser-${RELEASE_NO}" "${MAEPARSER_DIR}")
     else()
       message("-- Found MAEParser source in ${MAEPARSER_DIR}")
     endif()
