--- a/Code/GraphMol/Fingerprints/CMakeLists.txt
+++ b/Code/GraphMol/Fingerprints/CMakeLists.txt
@@ -23,3 +23,4 @@ rdkit_test(testFingerprintGenerators testFingerprintGenerators.cpp LINK_LIBRARIE
            Fingerprints SmilesParse GraphMol DataStructs
            RDGeneral )
 
+add_subdirectory(Wrap)
