Allow static building of coordgen and maeparser (with a small upstream change)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,9 @@ if(RDK_SWIG_STATIC AND RDK_BUILD_SWIG_WRAPPERS)
   endif(NOT RDK_INSTALL_STATIC_LIBS)
 endif()
 
+set(RDKIT_DYN_LINK FALSE)
 if(NOT (MSVC AND (NOT RDK_INSTALL_DLLS_MSVC)))
+  set(RDK_DYN_LINK TRUE)
   add_definitions(-DRDKIT_DYN_LINK)
 endif()
 
