--- a/Code/GraphMol/Fingerprints/Wrap/CMakeLists.txt
+++ b/Code/GraphMol/Fingerprints/Wrap/CMakeLists.txt
@@ -1,8 +1,8 @@
 rdkit_python_extension(rdAtomPairGenerator
                        AtomPairGeneratorWrapper.cpp
                        DEST Chem
-                       LINK_LIBRARIES Descriptors PartialCharges Fingerprints FileParsers SmilesParse Subgraphs
-SubstructMatch MolTransforms GraphMol EigenSolvers DataStructs RDGeneral RDGeometryLib RDBoost)
+                       LINK_LIBRARIES Fingerprints 
+                       DataStructs RDGeneral RDBoost)
                        
 add_pytest(pyAtomPairGenerator ${CMAKE_CURRENT_SOURCE_DIR}/testAtomPair.py)
 
