Morgan Fingerprint simple implementation

--- a/Code/GraphMol/Fingerprints/CMakeLists.txt
+++ b/Code/GraphMol/Fingerprints/CMakeLists.txt
@@ -4,6 +4,7 @@ add_definitions(-DRDKIT_FINGERPRINTS_BUILD)
 rdkit_library(Fingerprints
               Fingerprints.cpp PatternFingerprints.cpp MorganFingerprints.cpp
               AtomPairs.cpp MACCS.cpp FingerprintGenerator.cpp AtomPairGenerator.cpp
+              MorganGenerator.cpp
               LINK_LIBRARIES Subgraphs SubstructMatch SmilesParse GraphMol
               ${RDKit_THREAD_LIBS} )
 
@@ -13,6 +14,7 @@ rdkit_headers(AtomPairs.h
               MACCS.h
               FingerprintGenerator.h
               AtomPairGenerator.h
+              MorganGenerator.h
               DEST GraphMol/Fingerprints)
 
 rdkit_test(testFingerprints test1.cpp LINK_LIBRARIES 
