--- a/Code/GraphMol/Fingerprints/CMakeLists.txt
+++ b/Code/GraphMol/Fingerprints/CMakeLists.txt
@@ -4,7 +4,7 @@ add_definitions(-DRDKIT_FINGERPRINTS_BUILD)
 rdkit_library(Fingerprints
               Fingerprints.cpp PatternFingerprints.cpp MorganFingerprints.cpp
               AtomPairs.cpp MACCS.cpp FingerprintGenerator.cpp AtomPairGenerator.cpp
-              MorganGenerator.cpp
+              MorganGenerator.cpp RDKitFPGenerator.cpp
               LINK_LIBRARIES Subgraphs SubstructMatch SmilesParse GraphMol
               ${RDKit_THREAD_LIBS} )
 
@@ -15,6 +15,7 @@ rdkit_headers(AtomPairs.h
               FingerprintGenerator.h
               AtomPairGenerator.h
               MorganGenerator.h
+              RDKitFPGenerator.h
               DEST GraphMol/Fingerprints)
 
 rdkit_test(testFingerprints test1.cpp LINK_LIBRARIES 
