Topological torsion fp generator added

--- a/Code/GraphMol/Fingerprints/CMakeLists.txt
+++ b/Code/GraphMol/Fingerprints/CMakeLists.txt
@@ -5,6 +5,7 @@ rdkit_library(Fingerprints
               Fingerprints.cpp PatternFingerprints.cpp MorganFingerprints.cpp
               AtomPairs.cpp MACCS.cpp AtomPairGenerator.cpp
               MorganGenerator.cpp RDKitFPGenerator.cpp FingerprintUtil.cpp
+              TopologicalTorsionGenerator.cpp
               LINK_LIBRARIES Subgraphs SubstructMatch SmilesParse GraphMol
               ${RDKit_THREAD_LIBS} )
 
@@ -16,6 +17,7 @@ rdkit_headers(AtomPairs.h
               AtomPairGenerator.h
               MorganGenerator.h
               RDKitFPGenerator.h
+              TopologicalTorsionGenerator.h
               FingerprintUtil.h
               DEST GraphMol/Fingerprints)
 
