--- a/Code/GraphMol/CMakeLists.txt
+++ b/Code/GraphMol/CMakeLists.txt
@@ -137,5 +137,5 @@ rdkit_test(molBundleTest testMolBundle.cpp
 
 rdkit_test(test-valgrind test-valgrind.cpp LINK_LIBRARIES SmilesParse GraphMol RDGeneral)
 
-rdkit_catch_test(catch_tests catch_tests.cpp
+rdkit_catch_test(testsCatch catch_tests.cpp
            LINK_LIBRARIES SubstructMatch FileParsers SmilesParse GraphMol RDGeometryLib RDGeneral)
