Seperated FingerprintGenerator implementations into seperated file again

--- a/Code/GraphMol/Fingerprints/CMakeLists.txt
+++ b/Code/GraphMol/Fingerprints/CMakeLists.txt
@@ -3,9 +3,9 @@ remove_definitions(-DRDKIT_GRAPHMOL_BUILD)
 add_definitions(-DRDKIT_FINGERPRINTS_BUILD)
 rdkit_library(Fingerprints
               Fingerprints.cpp PatternFingerprints.cpp MorganFingerprints.cpp
-              AtomPairs.cpp MACCS.cpp AtomPairGenerator.cpp
-              MorganGenerator.cpp RDKitFPGenerator.cpp FingerprintUtil.cpp
-              TopologicalTorsionGenerator.cpp
+              AtomPairs.cpp MACCS.cpp FingerprintGenerator.cpp 
+              AtomPairGenerator.cpp MorganGenerator.cpp RDKitFPGenerator.cpp 
+              FingerprintUtil.cpp TopologicalTorsionGenerator.cpp
               LINK_LIBRARIES Subgraphs SubstructMatch SmilesParse GraphMol
               ${RDKit_THREAD_LIBS} )
 
